# plover_infogrip

./: MANIFEST.in  README.md  setup.cfg
plover_infogrip/: meta.py  system.py
plover_infogrip/assets/: infogrip_funcs.json  infogrip_main.json  infogrip_num.json
