[metadata]
name = plover_infogrip
version = 0.3.0
description = A Plover system to provide InfoGrip-esque chording
long_description = file: README.md
long_description_content_type = text/markdown
author = AlexandraAlter
author_email = alexandra.alter@protonmail.com
license = The Unlicense (Unlicense)
url = https://github.com/AlexandraAlter/plover_infogrip
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Plugins
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: The Unlicense (Unlicense)
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
keywords = plover plover_plugin
project_urls =
  Changelog = https://github.com/AlexandraAlter/plover_infogrip/blob/master/NEWS.md
  Source Code = https://github.com/AlexandraAlter/plover_infogrip
  Issue Tracker = https://github.com/AlexandraAlter/plover_infogrip/issues

[options]
include_package_data = True
python_requires = >=3.8
zip_safe = True
install_requires =
  plover>=4.0.0.dev1
  bitstring>=3.1.7
packages =
  plover_infogrip

[options.entry_points]
plover.system =
  InfoGrip = plover_infogrip.system
plover.meta =
  infogrip_mod = plover_infogrip.meta:mod
  infogrip_mode = plover_infogrip.meta:mode

[yapf]
based_on_style = pep8
column_limit = 110
indent_width = 2
